syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetCustomerInfo(HelloRequest) returns (stream CustomerData);
}


message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message CustomerData{
	string name = 1;
	int32 itemId = 2;
	bool isActiveCustomer = 3;
	string email = 4;
}
